tests/language_modules/05_records/invalid_semantics/unknown_record_variable.vf
module UnknownRecordVariable

procedure main()
is
    account.id := 1
    check true
end main

end UnknownRecordVariable